Fix jumpy navbar

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
 }
 
 .layout-default,
+.layout-essay > header,
 .content-default {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 200;
